--- a/lol-videos.html
+++ b/lol-videos.html
@@ -4,8 +4,8 @@
 <head>
 
     <!--Logrocket -->
-    <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
-    <script>
+    <script defer src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+    <script defer>
         window.LogRocket && window.LogRocket.init('dqqywl/nairol32-prod');
     </script>
 
@@ -38,33 +38,33 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
     <!-- JQuery My boy :) -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 
     <!--Bootstrap 5 css (place before custom css to avoid overrides)-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link defer href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
 
 
     <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
+    <link defer href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link defer href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
         type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
-    <link href="css/animations.css" rel="stylesheet" />
+    <link defer href="css/styles.css" rel="stylesheet" />
+    <link defer href="css/animations.css" rel="stylesheet" />
 
-    <script src="js/scripts.js"></script>
+    <script defer src="js/scripts.js"></script>
 
 
 
-    <script type='text/javascript'>
+    <script defer type='text/javascript'>
         window.talktype = window.talktype || function (f) {
             if (talktype.loaded)
                 f();
@@ -72,7 +72,7 @@
                 (talktype.q = talktype.q || []).push(arguments);
         };
     </script>
-    <script src='https://www.metype.com/quintype-metype/assets/metype.js'></script>
+    <script defer src='https://www.metype.com/quintype-metype/assets/metype.js'></script>
 
 
 
@@ -238,7 +238,8 @@
         <div class="row">
             <div class="col-lg-auto ms-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/fmI_Ndrxy14" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/fmI_Ndrxy14"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -246,7 +247,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/Zasx9hjo4WY" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/Zasx9hjo4WY"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -254,7 +256,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/aR-KAldshAE" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/aR-KAldshAE"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -262,7 +265,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/4Twd965VzX4" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/4Twd965VzX4"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -270,7 +274,8 @@
 
             <div class="col-lg-auto ms-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/r6zIGXun57U" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/r6zIGXun57U"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -279,7 +284,8 @@
             <div class="col-lg-auto me-auto">
 
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/fB8TyLTD7EE" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/fB8TyLTD7EE"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -288,7 +294,8 @@
             <div class="col-lg-auto me-auto">
 
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/i1IKnWDecwA" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/i1IKnWDecwA"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -296,7 +303,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/KbNL9ZyB49c" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/KbNL9ZyB49c"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -321,7 +329,8 @@
         <div class="row">
             <div class="col-lg-auto ms-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/0ngeSfH6SNs" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/0ngeSfH6SNs"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -329,7 +338,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/axMByEiMkgk" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/axMByEiMkgk"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -337,7 +347,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/44RqkYFgp7g" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/44RqkYFgp7g"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -345,7 +356,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/r4ufa7hik08" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/r4ufa7hik08"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -353,7 +365,8 @@
 
             <div class="col-lg-auto ms-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/0AvWV6Mk374" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/0AvWV6Mk374"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -361,7 +374,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/0nlJuwO0GDs" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/0nlJuwO0GDs"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -369,7 +383,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/Wo1pFeLhNyU" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/Wo1pFeLhNyU"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -377,7 +392,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/5nzeQ-vHF34" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/5nzeQ-vHF34"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -385,7 +401,8 @@
 
             <div class="col-lg-auto ms-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/zmdkmPsmEnA" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/zmdkmPsmEnA"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -393,7 +410,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/H1nRIX-qvbo" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/H1nRIX-qvbo"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -401,7 +419,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/Xw46WPuXMk0" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/Xw46WPuXMk0"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -409,7 +428,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/vzNcSvKCOyA" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/vzNcSvKCOyA"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -437,7 +457,8 @@
         <div class="row">
             <div class="col-lg-auto ms-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/j5QahFFHv0I" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/j5QahFFHv0I"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -445,7 +466,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/PX_IQkeXq9g" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/PX_IQkeXq9g"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -453,7 +475,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/YDX6zNxXCiA" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/YDX6zNxXCiA"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -461,7 +484,8 @@
 
             <div class="col-lg-auto me-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/XUQ4ZI0h0-E" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/XUQ4ZI0h0-E"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -469,7 +493,8 @@
 
             <div class="col-lg-auto ms-auto">
                 <div class="ratio ratio-16x9 youvid">
-                    <iframe src="https://www.youtube.com/embed/DLTUakdRmT8" title="YouTube video player" frameborder="0"
+                    <iframe src="https://www.youtube-nocookie.com/embed/DLTUakdRmT8"
+                        title="YouTube-nocookie video player" frameborder="0"
                         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
