--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 
     <!--Logrocket -->
-    <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
-    <script>
+    <script defer src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+    <script defer>
         window.LogRocket && window.LogRocket.init('dqqywl/nairol32-prod');
     </script>
 
@@ -39,30 +39,30 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
     <!-- JQuery My boy :) -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
     <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
+    <link defer rel="preconnect" href="https://fonts.googleapis.com">
+    <link defer rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link defer href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link defer href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
         type="text/css" />
-    <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet">
+    <link defer href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
-    <link href="css/animations.css" rel="stylesheet" />
+    <link defer href="css/styles.css" rel="stylesheet" />
+    <link defer href="css/animations.css" rel="stylesheet" />
 
 
     <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script defer src="js/scripts.js"></script>
 
 
-    <script type='text/javascript'>
+    <script defer type='text/javascript'>
         window.talktype = window.talktype || function (f) {
             if (talktype.loaded)
                 f();
@@ -70,7 +70,7 @@
                 (talktype.q = talktype.q || []).push(arguments);
         };
     </script>
-    <script src='https://www.metype.com/quintype-metype/assets/metype.js'></script>
+    <script defer src='https://www.metype.com/quintype-metype/assets/metype.js'></script>
 
 
 </head>
