--- a/index.html
+++ b/index.html
@@ -269,34 +269,38 @@
             <!-- About Section Content-->
             <div class="row">
                 <div class="col-lg-4 ms-auto">
-                    <p class="lead"> Je suis EDEMESSI florian, étudiant en medecine à la faculté des sciences
-                        de la santé (FSS) de cotonou. passionné de développement informatique, j'ai touché à tout dans
-                        le domaine.
-                        Développement web (évidemment...), graphisme, programmation desktop, android,
+                    <p class="lead"> Salut, Je suis EDEMESSI florian, étudiant en medecine à la faculté des sciences
+                        de la santé (FSS) de cotonou. passionné de développement informatique, j'ai touché à pas mal
+                        de choses dans le domaine. Développement web (évidemment...), graphisme, programmation desktop,
+                        android,
                         modélisation/animation 3D,
-                        motion graphics 2D, montage vidéo, vfx, beatmaking, game-design (tout je te dis). Mais là ou je
-                        suis le moins nul
-                        c'est le coding. Je continue toujours d'apprendre, et quand je ne foutille pas à l'hopital (vive
-                        l'externat),
-                        il m'arrive de Jouer sur mon Pc. Probablement mon principal hobby. Actuellement je gaspille de
+                        motion graphics 2D, montage vidéo, vfx, beatmaking, game-design (j'ai du mal à me spécialiser en
+                        fait).
+                        Mais là où je suis pas trop mauvais et où je m'amuse le plus, c'est le coding.
+                        Je suis en permanence en train d'apprendre un truc nouveau, et quand je ne foutille pas à
+                        l'hopital
+                        (vive l'externat),
+                        il m'arrive de Jouer sur mon Pc. c'est probablement mon principal hobby, et actuellement je
+                        gaspille de
                         nombreuses heures sur league of legends
                         et quelques jeux solo que mon ordinateur m'autorise à faire fonctionner.
                     </p>
                 </div>
                 <div class="col-lg-4 me-auto">
-                    <p class="lead"> Ceci est une page personnelle,hébergée sur github. Juste un mini-projet personnel
+                    <p class="lead"> Ceci est une page personnelle (hébergée sur Github). Juste un mini-projet personnel
                         qui me sert de couverture en attendant de réaliser un vrai portfolio (peut-etre...Si j'ai pas la
                         flemme).
-                        il se peut que j'ajoute des trucs ou que je la modifie. Il y a justement en bas un espace
+                        il se peut que j'ajoute des trucs ou que je modifie d'autres. Il y a justement en bas un espace
                         de commentaires. Vous pouvez y laisser un message sympa, une blague, une image drole, ou une
-                        critique CONSTRUCTIVE (svp restons courtois)
-                        et proposer des trucs à ajouter ou retirer...
-                        Vous pouvez le faire anonymement ou vous conneter (Sign in) par les moyens proposés. J'ai aussi
-                        ajouté une page fanzone league of legends
-                        (pourquoi pas). Vous pouvez y accéder via le Menu ou en cliquant <a href="/lol-fanzone.html"
+                        critique CONSTRUCTIVE et proposer des trucs à ajouter ou retirer...
+                        Vous pouvez le faire anonymement ou vous conneter (Sign in) par les moyens proposés.
+                        Le Menu (voir la barre de navigation en haut)
+                        contient toutes les pages du site, donc vos pouvez l'explorer pour voir le contenu que j'ajoute.
+                        par exemple il y a une page fanzone league of legends (pourquoi pas) où je parle brièvement du
+                        jeu.
+                        Vous pouvez y accéder via le Menu ou en cliquant <a href="/lol-fanzone.html"
                             role="button">ici</a>.
-                        Le site est en français de base mais y'a en haut des drapaux pour traduire au besoin (sauf les
-                        commentaires).
+
                         <br><br>
                         <span class="signature" style="font-family: 'Homemade Apple', cursive; ; margin-left: 30%;">
                             nair0lf32 </span>
