--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -100,7 +100,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
                             href="/index.html">Accueil</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#About">A
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">A
                             propos</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
                             href="/lol-videos.html">Videos</a></li>
@@ -316,7 +316,7 @@
                         <br />Vu le temps que je consacre à ce jeu
                         je me suis dit pourquoi ne pas en parler un peu? Alors League of legends est
                         un jeu réalisé et appartenant à Riot games Inc. Un petit studio au
-                        départ qui aujourd'hui est une grosse entreprise rachetée par tencent
+                        départ, aujourd'hui c'est une grosse entreprise rachetée par tencent
                         games (le géant du jeu vidéo chinois). Le jeu a bien évolué au fil du
                         temps (depuis 2009) mais personnellement je l'ai rejoint en
                         2016 (saison 6 je crois). J'ai débuté sur le serveur europe de l'ouest
@@ -365,10 +365,9 @@
                         (commnauté la plus toxique du gaming? XD).
                         Mais ça c'est tout un débat que je n'aborderai pas ici (mais vous etes avertis).<br />
                         J'ai ajouté dans le menu une page vidéos avec les meilleurs clips et trailers (selon moi)
-                        de league of legends.&nbsp;<br /> <br />Bon, sur ce je vous laisse, les minions apparaissent
-                        dans 30
-                        secondes. Peut-etre pourrions nous nous croiser dans la faille de
-                        l'invocateur. "Bonne chance dans les champs de justice"
+                        de league of legends.&nbsp;<br /> <br />Bon, sur ce je vous laisse.
+                        Peut-etre pourrions nous nous croiser dans la faille de
+                        l'invocateur. "Bonne chance dans les champs de justice".
                         <br><br>
                         <span class="signature" style="font-family: 'Homemade Apple', cursive; ; margin-left: 30%;">
                             nair0lf32 </span>
