fix service-worker register function

--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="fr">
 
 <head>
+    <!--PWA-->
+    <link rel="manifest" href="/manifest.json">
 
     <!--Logrocket -->
     <script defer src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
     <script defer>
         window.LogRocket && window.LogRocket.init('dqqywl/nairol32-prod');
     </script>
-
-    <!--PWA-->
-    <link rel="manifest" href="manifest.json">
 
     <!--Meta tags -->
     <meta charset="utf-8" />
