--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -2,6 +2,8 @@
 <html lang="fr">
 
 <head>
+    <!--PWA-->
+    <link rel="manifest" href="/manifest.json">
 
     <!--Logrocket -->
     <script defer src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
