change manifest and add icons

--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -3,7 +3,7 @@
 
 <head>
     <!--PWA-->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/manifest.webmanifest">
 
     <!--Logrocket -->
     <script defer src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
