--- a/lol-videos.html
+++ b/lol-videos.html
@@ -3,7 +3,7 @@
 
 <head>
     <!--PWA-->
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/manifest.webmanifest">
 
 
     <!--Logrocket -->
