update A propos with portfolio link

--- a/index.html
+++ b/index.html
@@ -276,31 +276,33 @@
                         motion graphics 2D, montage vidéo, vfx, beatmaking, game-design (j'ai du mal à me spécialiser en
                         fait).
                         Mais là où je suis pas trop mauvais et où je m'amuse le plus, c'est le coding.
-                        Je suis en permanence en train d'apprendre un truc nouveau, et quand je ne foutille pas à
-                        l'hopital
-                        (vive l'externat),
-                        il m'arrive de Jouer sur mon Pc. c'est probablement mon principal hobby, et actuellement je
-                        gaspille de
-                        nombreuses heures sur league of legends
-                        et quelques jeux solo que mon ordinateur m'autorise à faire fonctionner.
+                        Je suis en permanence en train d'apprendre un truc nouveau...Là par exemple je me lance dans la
+                        cybersécurité (hehehe).
+                        Quand je ne foutille pas à l'hopital (vive l'externat),
+                        Il m'arrive de Jouer sur mon Pc. c'est probablement mon principal hobby, et actuellement je
+                        gaspille de nombreuses heures sur league of legends et quelques jeux solo que mon ordinateur
+                        m'autorise à faire fonctionner. J'aime bien les anime aussi...les bons.
                     </p>
                 </div>
                 <div class="col-lg-4 me-auto">
-                    <p class="lead"> Ceci est une page personnelle (hébergée sur Github). Juste un mini-projet personnel
-                        qui me sert de couverture en attendant de réaliser un vrai portfolio (peut-etre...Si j'ai pas la
-                        flemme).
-                        il se peut que j'ajoute des trucs ou que je modifie d'autres. Il y a justement en bas un espace
+                    <p class="lead"> Ceci est mon site web personnel (hébergée sur Github). Un petit projet personnel
+                        qui me sert
+                        de couverture et que j'enrichirai avec des pages personelles.
+                        Il se peut que j'ajoute des trucs ou que je modifie d'autres. Il y a justement en bas un espace
                         de commentaires. Vous pouvez y laisser un message sympa, une blague, une image drole, ou une
                         critique CONSTRUCTIVE et proposer des trucs à ajouter ou retirer...
                         Vous pouvez le faire anonymement ou vous conneter (Sign in) par les moyens proposés.
                         Le Menu (voir la barre de navigation en haut)
-                        contient toutes les pages du site, donc vos pouvez l'explorer pour voir le contenu que j'ajoute.
+                        contient toutes les pages du site, donc vous pouvez l'explorer pour voir le contenu que
+                        j'ajoute (quand ja'ai pas trop la flemme).
                         par exemple il y a une page fanzone league of legends (pourquoi pas) où je parle brièvement du
-                        jeu.
-                        Vous pouvez y accéder via le Menu ou en cliquant <a href="/lol-fanzone.html"
-                            role="button">ici</a>.
+                        jeu. Vous pouvez y accéder via le Menu ou en cliquant <a href="/lol-fanzone.html"
+                            role="button">ici</a>. Si vous voulez voir mes projets pros...Je bosse actuellement sur mon
+                        portfolio. vous pouvez le voir en cliquant ici:
+                        <br> <br>
+                        <a href="https://nair0lf32.github.io/portfolio" role="button">Portfolio</a>.
 
-                        <br><br>
+                        <br><br><br>
                         <span class="signature" style="font-family: 'Homemade Apple', cursive; ; margin-left: 30%;">
                             nair0lf32 </span>
                     </p>
