--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -104,8 +104,6 @@
                             href="/index.html">Accueil</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">A
                             propos</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="/lol-videos.html">Videos</a></li>
                 </ul>
             </div>
         </div>
@@ -366,8 +364,26 @@
                         pas que des aspects positifs et on vous en parle sur le site du jeu
                         (commnauté la plus toxique du gaming? XD).
                         Mais ça c'est tout un débat que je n'aborderai pas ici (mais vous etes avertis).<br />
-                        J'ai ajouté dans le menu une page vidéos avec les meilleurs clips et trailers (selon moi)
-                        de league of legends.&nbsp;<br /> <br />Bon, sur ce je vous laisse.
+
+                        Leaue of legends c'est tout un univers avec une belle histoire écrite autour de chaque
+                        personnage du jeu.
+                        Riots Games l'a vite compris et a dévellopé une série d'animation "Arcane" basée sur une
+                        (minime) partie de
+                        l'univers du jeu. Ils font des animations de qualité q'on peut découvrir dans leurs vidéos.
+                        personnellement les cinématiques des champions et les hymnes du mondial sont mes favorites.
+
+                        Il y en a plein et je pex pas tout lister donc Je vous invite à découvrir la chaine youtube de
+                        League of legends: &nbsp;<br /> <br /> <a href="https://www.youtube.com/c/leagueoflegends/"
+                            target="_blank">Cliquez
+                            ici pour voir les vidéos</a>
+
+                        <br /> Mes favorites c'est "warriors" et "ennemy" de imagine dragons, "ignite" de zedd,
+                        "Rise", "The legends", "seconds", "chasseurs éternels"...
+
+                        bref j'aime bien leurs vidéos quoi (XD)
+                        <br />
+
+                        Bon, sur ce je vous laisse.
                         Peut-etre pourrions nous nous croiser dans la faille de
                         l'invocateur. "Bonne chance dans les champs de justice".
                         <br><br>
