--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-0">Medic - Codeur - graphiste - Gamer</p>
+            <p class="masthead-subheading font-weight-light mb-0">Medic - Codeur - graphiste amateur - Gamer - Flemmard
+                à plein temps</p>
         </div>
     </header>
     <!-- Portfolio Section-->
