--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -4,14 +4,11 @@
 <head>
     <!--PWA-->
     <link rel="manifest" href="/manifest.webmanifest">
-
     <!--Logrocket -->
     <script defer src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
     <script defer>
         window.LogRocket && window.LogRocket.init('dqqywl/nairol32-prod');
     </script>
-
-
     <!--Meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -19,7 +16,6 @@
     <meta name="author" content="EDEMESSI Florian" />
     <meta name="keywords" content="EDEMESSI,Florian,nairolf32,nair0lf32,github-page,personnal">
     <title>EDEMESSI Florian nair0lf32</title>
-
     <!-- Open Graph -->
     <meta property="og:title" content="EDEMESSI Florian nair0lf32" />
     <meta property="og:type" content="website" />
@@ -34,24 +30,17 @@
     <meta name="twitter:title" property="og:title" itemprop="name" content="EDEMESSI Florian nair0lf32">
     <meta name="twitter:description" property="og:description" itemprop="description"
         content="Personal github page of EDEMESSI 'nairolf32' Florian">
-
-
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-
-
     <!-- JQuery My boy :) -->
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
     <!--Bootstrap 5 css (place before custom css to avoid overrides)-->
     <link defer href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
-
-
     <!-- Font Awesome icons (free version)-->
     <script defer src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -64,10 +53,8 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link defer href="css/styles.css" rel="stylesheet" />
     <link defer href="css/animations.css" rel="stylesheet" />
-
     <script defer src="js/scripts.js"></script>
-
-
+    <!-- Metype.com scripts -->
     <script defer type='text/javascript'>
         window.talktype = window.talktype || function (f) {
             if (talktype.loaded)
@@ -77,9 +64,8 @@
         };
     </script>
     <script defer src='https://www.metype.com/quintype-metype/assets/metype.js'></script>
-
-
 </head>
+
 
 <body id="page-top">
     <!-- For loading purposes-->
@@ -108,7 +94,6 @@
             </div>
         </div>
     </nav>
-
 
     <!-- GTranslate: https://gtranslate.io/ -->
     <div class="page-section d-flex align-items-center flags bg-secondary justify-content-center">
@@ -142,49 +127,7 @@
             class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png"
                 height="24" width="24" alt="Spanish" /></a>
     </div>
-
-
-
-    <style type="text/css">
-        a.gflag {
-            vertical-align: middle;
-            font-size: 24px;
-            padding: 1px 0;
-            background-repeat: no-repeat;
-            background-image: url(//gtranslate.net/flags/24.png);
-        }
-
-        a.gflag img {
-            border: 0;
-        }
-
-        a.gflag:hover {
-            background-image: url(//gtranslate.net/flags/24a.png);
-        }
-
-        #goog-gt-tt {
-            display: none !important;
-        }
-
-        .goog-te-banner-frame {
-            display: none !important;
-        }
-
-        .goog-te-menu-value:hover {
-            text-decoration: none !important;
-        }
-
-        body {
-            top: 0 !important;
-        }
-
-        #google_translate_element2 {
-            display: none !important;
-        }
-    </style>
-
-    <div id="google_translate_element2"></div>
-    <script type="text/javascript">
+    <script defer type="text/javascript">
         function googleTranslateElementInit2() {
             new google.translate.TranslateElement({
                 pageLanguage: 'fr',
@@ -192,11 +135,9 @@
             }, 'google_translate_element2');
         }
     </script>
-    <script type="text/javascript"
+    <script defer type="text/javascript"
         src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2"></script>
-
-
-    <script type="text/javascript">
+    <script defer type="text/javascript">
         /* <![CDATA[ */
         eval(function (p, a, c, k, e, r) {
             e = function (c) {
@@ -220,8 +161,9 @@
             43, 43,
             '||document|var|if|length|function|GTranslateFireEvent|value|createEvent||||||true|else|doGTranslate||getElementById|google_translate_element2|innerHTML|change|try|HTMLEvents|initEvent|dispatchEvent|createEventObject|fireEvent|on|catch|return|split|getElementsByTagName|select|for|className|goog|te|combo|null|setTimeout|500'
                 .split('|'), 0, {}))
-        /* ]]> */
+                /* ]]> */
     </script>
+    <div id="google_translate_element2"></div>
 
 
     <!-- carousel -->
@@ -279,7 +221,6 @@
         </button>
     </div>
 
-
     <!-- Yes I am using a whole section as a separator (design purposes). I have no shame XD-->
     <section class="page-section bg-secondary text-white mb-0" id="theGame">
         <!-- Comment Section Heading-->
@@ -291,8 +232,6 @@
             <div class="divider-custom-line"></div>
         </div>
     </section>
-
-
 
 
     <!-- About Section-->
@@ -352,7 +291,6 @@
                     </div>
 
 
-
                     <p class="lead text-white text-center mb-0">
                         <br />&nbsp;Sinon vous pouez toujours visiter le site web officiel de
                         Riot games (Rito pour les intimes):
@@ -396,7 +334,6 @@
     </section>
 
 
-
     <!-- Another separator I am totally asssuming (proudly XD )-->
     <section class="page-section bg-secondary text-white mb-0" id="disclaimer">
         <!-- Comment Section Heading-->
@@ -408,7 +345,6 @@
             <div class="divider-custom-line"></div>
         </div>
     </section>
-
 
 
     <!-- Footer-->
